Fix alignment of testcase indicators

--- a/app/assets/stylesheets/submissions.css.less
+++ b/app/assets/stylesheets/submissions.css.less
@@ -25,8 +25,7 @@
     .indicator {
       width: 15px;
       height: 15px;
-      margin: 3px;
-      margin-right: -12px;
+      margin: 0 -12px 3px 3px;
       float: right;
 
       span {
